# streamlit-template

./: .gitignore  Procfile  README.md  environment.yml  justfile  pyproject.toml
.streamlit/: config.toml
src/: Home.py
src/pages/: 0_first_page.py
src/services/: auth.py  constants.py  fileio.py  plot.py
tests/: test_app.py  test_first_page.py
